# Calby

./: README.md  pyproject.toml
api/: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt
api/agents/: agent_orchestrator.py  main_agent.py  nodes.py  run_specialist.py  run_support.py  state.py  support_agent.py  transfer_agent.py
api/agents/langgraph/: state.py
api/agents/langgraph/workflows/: support_workflow.py  transfer_workflow.py
api/agents/langgraph_agents/: nodes.py  state.py
api/agents/langgraph_agents/workflows/: __init__.py  chat_workflow.py  support_workflow.py  transfer_workflow.py
api/agents/langgraph_workflows/: nodes.py  state.py
api/agents/langgraph_workflows/workflows/: __init__.py  chat_workflow.py  support_workflow.py
api/agents/livekit_agents/: __init__.py  specialist_agent.py  summary_agent.py  support_agent.py
api/agents/workflows/: support_workflow.py  transfer_workflow.py
api/app/: main.py  schemas.py
api/app/agents/: graph.py  nodes.py  state.py
api/app/agents/summarizer/: __init__.py  graph.py  nodes.py  state.py
api/app/core/: config.py
api/app/routers/: __init__.py  call.py
api/app/services/: __init__.py  livekit_service.py  transfer_service.py
api/core/: config.py
docs/: api_documentation.md  architecture.md  frontend.md  setup.md  web_documentation.md
web/: .env.example  README.md  eslint.config.mjs  package.json
web/components/: app.tsx  session-view.tsx
web/src/app/: page.tsx
web/src/app/room/: page.tsx
web/src/components/: landing.tsx
web/src/lib/: constants.ts
(+1 files in other folders)
