[project]
name = "Calby-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "langchain-google-genai>=2.1.12",
    "livekit-agents[cartesia,deepgram]~=1.2",
    "livekit-plugins-langchain~=1.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agents*"]
exclude = ["tests*"]
